--- a/springboot-api-demo/src/main/resources/application.properties
+++ b/springboot-api-demo/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.address=127.0.0.1
 server.port=8081
 spring.datasource.url=jdbc:mysql://mysql-shubh-shubhgupta4u-c0e4.d.aivencloud.com:28112/productdb
 spring.datasource.username=shubh
+# System Environment Variable 'MYSQL_DB_PWD' with MySql Password
 spring.datasource.password=${MYSQL_DB_PWD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
