--- a/springboot-api-demo/pom.xml
+++ b/springboot-api-demo/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>springboot-api-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-api-demo</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo Rest API project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,10 +27,21 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
-		<kotlin.version>1.8.0</kotlin.version>
+		<java.version>22</java.version>
+		<kotlin.version>2.0.21</kotlin.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>local</id>
+			<url>file://${user.home}/.m2/repository</url>
+		</repository>
+	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>library.domain.demo</groupId>
+			<artifactId>library-domain</artifactId>
+			<version>1.0.0</version>
+		</dependency>		
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
@@ -137,7 +148,7 @@
         </execution>
     </executions>
     <configuration>
-        <jvmTarget>17</jvmTarget>
+        <jvmTarget>22</jvmTarget>
         <args>
             <arg>-Xjsr305=strict</arg>
         </args>
@@ -173,8 +184,8 @@
 		<compilerArgs>
             <arg>-parameters</arg>
         </compilerArgs>
-        <source>17</source>
-        <target>17</target>
+        <source>22</source>
+        <target>22</target>
     </configuration>
 </plugin>
 
